No borders on images - stops border showing on IE

--- a/source/assets/stylesheets/_header.scss
+++ b/source/assets/stylesheets/_header.scss
@@ -69,6 +69,7 @@
       float: left;
       display: inline;
       line-height: inherit;
+      border: none;
     }
 
     span>span {
